Fix `write-text` wrapping

--- a/projects/skills/src/app/task/shared/write-task/write-task.component.scss
+++ b/projects/skills/src/app/task/shared/write-task/write-task.component.scss
@@ -11,6 +11,7 @@
   &__description {
     margin-bottom: 26px;
     color: var(--grey-text);
+    white-space: pre-wrap;
   }
 
   &__textarea {
